--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,13 +24,13 @@
         </li>
 
         <li class="nav-item">
-            <a class="font-weight-bold nav-link text-center" href="#" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-center" href="{% url 'taproom' %}" aria-expanded="false">
                 Tap Room
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="font-weight-bold nav-link text-center" href="#" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-center" href="{% url 'our_story' %}" aria-expanded="false">
                 Our Story
             </a>
         </li>
