style navbar and footer colors updated

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,7 @@
                     we have a great selection of beer,
                     ales and stouts for you to enjoy.
                     check out our selection here</p>
-                <a href="{% url 'products' %}" class="mb-3 btn btn-primary btn-lg px-4 gap-3">
+                <a href="{% url 'products' %}" class="mb-3 btn btn-main-color btn-lg px-4 gap-3">
                     Shop Now
                 </a>
             </div>
@@ -41,7 +41,8 @@
                     <h2>Caft Beer</h2>
                     <div class="col-lg-6 mx-auto">
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <a type="button" href="{% url 'products' %}" class="btn btn-primary btn-lg px-4 gap-3">Shop
+                            <a type="button" href="{% url 'products' %}"
+                                class="btn btn-main-color btn-lg px-4 gap-3">Shop
                                 Now</a>
                         </div>
                     </div>
@@ -61,7 +62,8 @@
                             to enjoy. We are open 7 days a
                             week so get yourself down.</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <a href="{% url 'booking_taproom' %}" class="btn btn-primary btn-lg px-4 gap-3">Book Now</a>
+                            <a href="{% url 'booking_taproom' %}" class="btn btn-main-color btn-lg px-4 gap-3">Book
+                                Now</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +81,7 @@
                             festivals. So if you cant make it to the
                             brewery you can try our beer there</p>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                            <a href="{% url 'events' %}" class="btn btn-primary btn-lg px-4 gap-3">Events</a>
+                            <a href="{% url 'events' %}" class="btn btn-main-color btn-lg px-4 gap-3">Events</a>
                         </div>
                     </div>
                 </div>
