--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,5 +1,5 @@
 <!-- large screen bottom navbar -->
-<div class="collapse navbar-collapse row" id="main-nav">
+<div class="collapse navbar-collapse row white-text" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto w-100">
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black text-center" href="{% url 'home' %}"
