--- a/templates/base.html
+++ b/templates/base.html
@@ -49,12 +49,12 @@
     <!-- header -->
     <header class="container-fluid fixed-top">
         <!-- top navbar   -->
-        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+        <div id="topnav" class="row pt-lg-2 d-none d-lg-flex nav-bar white-text">
             <div class="col-12 col-lg-8 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <ul class="social-links w-100">
                     <li class="list-inline-item">
                         <a href="https://www.facebook.com/" target="_blank" aria-label="link to Facebook"
-                            rel="noopener"><i class="fab fa-facebook fa-lg" aria-hidden="true"></i><span
+                            rel="noopener"><i class="fab fa-facebook fa-lg orange-hover" aria-hidden="true"></i><span
                                 class="sr-only">Facebook</span></a>
                     </li>
                     <li class="list-inline-item">
@@ -121,18 +121,17 @@
         <!-- ./top navar -->
 
         <!-- middle navbar -->
-        <div class=" row nav-middle bg-white d-lg-flex" id="middle-nav">
+        <div class=" row nav-middle  d-lg-flex nav-bar" id="middle-nav">
             <div class="col-lg-6 d-flex justify-content-end"><a href="{% url 'home' %}">
-                    <img class="logo" src="{% static 'images/blacklogo.svg' %}" alt="North Yeast Brewing Logo">
+                    <img class="logo" src="{% static 'images/whitelogo.svg' %}" alt="North Yeast Brewing Logo">
                 </a>
             </div>
             <div class="col-lg-6 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">
                     <div class="input-group w-50">
-                        <input class="form-control border border-black rounded-0" type="text" name="q"
-                            placeholder="Search our site">
+                        <input class="form-control rounded-0" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                            <button class="form-control btn-main-color rounded-0" type="submit">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
@@ -145,7 +144,7 @@
         <!-- ./middle navbar -->
 
         <!-- bottom navbar and nav list  -->
-        <div class="row bg-white">
+        <div class="row nav-bar">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -189,15 +188,16 @@
     <footer class="new-section-margin ">
         <div class="row">
             <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
-                <img class="logo" src="{% static 'images/blacklogo.svg' %}" alt="North Yeast Brewing Logo">
+                <a href="{% url 'home' %}"><img class="logo" src="{% static 'images/whitelogo.svg' %}"
+                        alt="North Yeast Brewing Logo"></a>
             </div>
 
             <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
                 <h5>Need Help?</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="{% url 'ts_and_cs' %}" class="nav-link p-0 text-muted">Terms and
+                    <li class="nav-item mb-2"><a href="{% url 'ts_and_cs' %}" class="nav-link p-0">Terms and
                             Conditions</a></li>
-                    <li class="nav-item mb-2"><a href="{% url 'privacy' %}" class="nav-link p-0 text-muted">Privacy
+                    <li class="nav-item mb-2"><a href="{% url 'privacy' %}" class="nav-link p-0">Privacy
                             Policy</a></li>
                 </ul>
             </div>
@@ -205,11 +205,11 @@
             <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
                 <h5>Get in Touch</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="{% url 'contact' %}" class="nav-link p-0 text-muted">Contact
+                    <li class="nav-item mb-2"><a href="{% url 'contact' %}" class="nav-link p-0">Contact
                             Us</a></li>
-                    <li class="nav-item mb-2"><a href="{% url 'booking_taproom' %}" class="nav-link p-0 text-muted">Book
+                    <li class="nav-item mb-2"><a href="{% url 'booking_taproom' %}" class="nav-link p-0">Book
                             the Taproom</a></li>
-                    <li class="nav-item mb-2"><a href="{% url 'book_brew_tour' %}" class="nav-link p-0 text-muted">Book
+                    <li class="nav-item mb-2"><a href="{% url 'book_brew_tour' %}" class="nav-link p-0">Book
                             the Brewtour</a></li>
                 </ul>
             </div>
