style dropdown nav elements styled

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,7 +39,7 @@
             <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center" id="beer-feature">
                 <div class="mb-3 text-center overlay">
                     <h2>Caft Beer</h2>
-                    <div class="col-lg-6 mx-auto">
+                    <div class="col-lg-12 mx-auto">
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
                             <a type="button" href="{% url 'products' %}"
                                 class="btn btn-main-color btn-lg px-4 gap-3">Shop
@@ -50,12 +50,12 @@
             </div>
         </div>
 
-        <div class="col-lg-6 col-xs-12 d-flex align-items-end justify-content-center feat-container">
+        <div class="col-lg-6 col-m-12 d-flex align-items-end justify-content-center feat-container">
             <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center"
                 id="tap-room-feature">
                 <div class="mb-3 text-center overlay">
                     <h2>The Taproom</h2>
-                    <div class="col-lg-6 mx-auto">
+                    <div class="col-lg-12 mx-auto">
                         <p class="mb-4 d-none d-md-flex">Come and check out our Taproom.
                             we have a great selection of
                             draught craft beer for you
@@ -69,12 +69,12 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6 col-xs-12 d-flex align-items-end justify-content-center">
+        <div class="col-lg-6 col-m-12 d-flex align-items-end justify-content-center">
             <div class="feature px-4 py-5 text-center d-flex align-items-end justify-content-center"
                 id="events-feature">
                 <div class="mb-3 text-center overlay">
                     <h2>Hope to see you there!</h2>
-                    <div class="col-lg-6 mx-auto">
+                    <div class="col-lg-12 mx-auto">
                         <p class="mb-4 d-none d-md-flex">
                             North Yeast Brewing travel up and
                             the country attending beer events and
