--- a/templates/base.html
+++ b/templates/base.html
@@ -85,18 +85,24 @@
                                 <p class="my-0">My Account</p>
                             </div>
                         </a>
-                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                        <div class="dropdown-menu border-0 dark-background-color text-center"
+                            aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                             {% if request.user.is_superuser %}
-                            <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                            <a href="{% url 'send_newsletter' %}" class="dropdown-item">Create Newsletter</a>
-                            <a href="{% url 'view_email_list' %}" class="dropdown-item">Newsletter signups</a>
+                            <a href="{% url 'add_product' %}" class="dropdown-item text-white">Product Management</a>
+                            <a href="{% url 'send_newsletter' %}" class="dropdown-item text-white">Create Newsletter</a>
+                            <a href="{% url 'view_email_list' %}" class="dropdown-item text-white">Mange Newsletter
+                                signups</a>
+                            <a href="{% url 'add_event' %}" class="dropdown-item text-white">Create Events</a>
+                            <a href="{% url 'messages' %}" class="dropdown-item text-white">Manage Messages</a>
+                            <a href="{% url 'manage_bookings' %}" class="dropdown-item text-white">Manage Bookings</a>
+
                             {% endif %}
-                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            <a href="{% url 'profile' %}" class="dropdown-item text-white">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item text-white">Logout</a>
                             {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            <a href="{% url 'account_signup' %}" class="dropdown-item text-white">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item text-white">Login</a>
                             {% endif %}
                         </div>
                     </li>
@@ -145,7 +151,7 @@
 
         <!-- bottom navbar and nav list  -->
         <div class="row nav-bar">
-            <nav class="navbar navbar-expand-lg navbar-light w-100">
+            <nav class="navbar navbar-expand-lg navbar-dark w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -185,7 +191,7 @@
 
 
     <!-- footer -->
-    <footer class="new-section-margin ">
+    <footer class="new-section-margin py-5">
         <div class="row">
             <div class="col-md-2 col-sm-12 text-center mt-sm-5 mt-md-0">
                 <a href="{% url 'home' %}"><img class="logo" src="{% static 'images/whitelogo.svg' %}"
@@ -218,20 +224,20 @@
                 <form method="Post" action="{% url 'newsletter' %}" id="newsletter-signup">
                     {% csrf_token %}
                     <h5>Subscribe to our newsletter</h5>
-                    <p>Get the lastest deals and events</p>
+                    <h6>Get the lastest deals and events</h6>
                     <div class="d-flex w-100 gap-2">
                         <!-- <label for="newsletter1" class="visually-hidden">Email address</label> -->
                         <input id="email" type="text" name=newsletter class="form-control" placeholder="Email address"
                             required>
-                        <button class="btn btn-primary" type="submit">Subscribe</button>
+                        <button class="btn btn-main-color" type="submit">Subscribe</button>
                     </div>
                 </form>
             </div>
         </div>
 
-        <div class="d-flex justify-content-between py-4 my-4 border-top row mt-sm-5">
+        <div class="d-flex justify-content-between py-4 my-4 border-top row mt-sm-5 padding-5">
             <div class="col-sm-12 col-md-6 justify-content-xs-center justify-content-md-end">
-                <p>© 2022 North Yeast Brewing, Inc. All rights reserved.</p>
+                <h6>© 2022 North Yeast Brewing, Inc. All rights reserved.</h6>
             </div>
             <div class=" col-sm-12 col-md-6 d-flex justify-content-xs-center justify-content-md-end">
                 <ul class="social-links text-center">
