--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,9 +1,8 @@
 <!-- large screen bottom navbar -->
-<div class="collapse navbar-collapse row white-text" id="main-nav">
+<div class="collapse navbar-collapse row" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto w-100">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black text-center" href="{% url 'home' %}"
-                aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-center" href="{% url 'home' %}" aria-expanded="false">
                 Home
             </a>
         </li>
@@ -13,7 +12,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 Beers
             </a>
-            <div class="dropdown-menu border-0 text-center" aria-labelledby="beers-link">
+            <div class="dropdown-menu border-0 dark-background-color text-center" aria-labelledby="beers-link">
                 <a href="{% url 'products' %}" class="dropdown-item">Shop All</a>
                 <a href="{% url 'products' %}?style=IPA" class="dropdown-item">IPAs</a>
                 <a href="{% url 'products' %}?style=Ale" class="dropdown-item">Ales</a>
@@ -54,7 +53,7 @@
                     <p class="my-0">My Account</p>
                 </div>
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+            <div class="dropdown-menu border-0 dark-background-color text-center" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
                 <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
