--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,7 +57,7 @@ li {
 /* colors */
 
 .dark-text {
-    color: ;
+    color: #142127;
 }
 
 a {
@@ -105,6 +105,20 @@ footer {
 .btn-main-color:hover {
     background-color: #142127;
     color: #F29035;
+}
+
+.btn-secoundary-color {
+    background-color: #142127;
+    color: #fafafa;
+    transition: 0.5s;
+}
+
+.btn-secoundary-color:hover {
+    background-color: #fafafa;
+    color: #142127;
+    border: 2px solid #142127;
+    font-weight: 600;
+
 }
 
 /* navbar  */
