--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -5,7 +5,7 @@
 {% block hero %}
 <!-- hero -->
 <section class="mt-10">
-    <div class="px-4 py-5 text-center d-flex align-items-end justify-content-center" id="index-hero-image">
+    <div class="px-4 py-5 text-center d-flex align-items-end justify-content-center" id="events-hero-image">
         <div class="overlay hero-call-to-action mb-3 d-none d-md-block">
             <h1 class="display-5 fw-bold">EVENTS</h1>
             <div class="col-lg-6 mx-auto">
