--- a/static/css/base.css
+++ b/static/css/base.css
@@ -214,6 +214,13 @@ nav .navbar-nav li a:hover {
     height: 50vh;
 }
 
+#events-hero-image {
+    background: url('/media/banner-6.png') no-repeat center center;
+    background-size: cover;
+    color: #fafafa;
+    height: 50vh;
+}
+
 /* Index.html */
 
 .hero {
