style contacts page styles improved

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -25,7 +25,7 @@
                     We Are open 7 days a
                     week so get yourself down</p>
                 <a href="{% url 'products' %}" class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
-                    <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Book Now</button>
+                    <button type="button" class="btn btn-main-color btn-lg px-4 gap-3">Book Now</button>
                 </a>
             </div>
         </div>
@@ -58,9 +58,9 @@
 
 <!-- Contact info Section -->
 <section>
-    <div class="container-fluid">
+    <div class="container-fluid new-section-margin dark-background-color py-5">
         <div class="row">
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-md-1 col-12">
                 <div class="info-content">
                     <ul>
                         <h2>OPENING HOURS</h2>
@@ -75,7 +75,7 @@
 
                 </div>
             </div>
-            <div class="col-5 offset-1">
+            <div class="col-md-5 offset-md-1 col-sm-12">
                 <div class="info-content">
                     <ul>
                         <h2>CONTACT</h2>
@@ -83,8 +83,14 @@
                         <li><a href="mailto:northyeastbrewing@gmail.com"><i class="fas fa-envelope-square"></i>
                                 <Northyeastbrewing@gmail class="com">Northyeastbrewing@gmail
                             </a></li>
-                        <li><i class="fas fa-map-marker-alt"></i>76 Sandringham Road, Gosforth, Newcastle<br>
-                            &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;NE3 1QB</li><br><br>
+                        <li class="d.flex">
+                            <div>
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div>76 Sandringham Road, <br>Gosforth, <br>Newcastle<br>
+                                NE3 1QB
+                            </div>
+                        </li>
                         <li><a href="https://www.facebook.com"><i
                                     class="fab fa-facebook-square"></i>NorthYeastBrewing</a></li>
                         <li><a href="https://www.twitter.com"><i
@@ -102,7 +108,7 @@
 
 <!-- Find Us Section -->
 
-<section class="container">
+<section class="container-fluid new-section-margin">
     <div class="findus-content">
         <div class="text-center">
             <h1>FIND US</h1>
