--- a/static/css/base.css
+++ b/static/css/base.css
@@ -55,7 +55,6 @@ li {
 
 
 /* colors */
-
 a {
     text-decoration: none;
     color: #fafafa;
@@ -116,7 +115,6 @@ footer {
 }
 
 /* navbar  */
-
 #mobile-logo {
     margin-left: 9em;
 }
@@ -169,7 +167,6 @@ nav .navbar-nav li a:hover {
 }
 
 /* Hero image section */
-
 .overlay {
     background-color: rgba(0, 0, 0, 0.6);
     color: #fafafa;
@@ -179,8 +176,7 @@ nav .navbar-nav li a:hover {
     max-width: 800px;
 }
 
-/* section */
-
+/* sections */
 .new-section-margin {
     margin-top: 90px;
 }
@@ -191,6 +187,13 @@ nav .navbar-nav li a:hover {
     background-image: url('/media/banner3.png');
     background-size: cover;
     background-position: center;
+}
+
+.product-hero {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+
 }
 
 #contact-hero-image {
@@ -222,7 +225,6 @@ nav .navbar-nav li a:hover {
 }
 
 /* Index.html */
-
 .hero {
     background-size: cover;
     color: #fafafa;
@@ -235,30 +237,6 @@ nav .navbar-nav li a:hover {
     color: #fafafa;
     height: 50vh;
 }
-
-
-
-
-/* product details page heros */
-
-.product-hero {
-    width: 100%;
-    height: 50vh;
-    object-fit: cover;
-
-}
-
-.product-overlay {
-    width: 30%;
-}
-
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 
 
 /* Index Features */
@@ -328,6 +306,18 @@ nav .navbar-nav li a:hover {
 }
 
 /* Product page */
+
+/* product details page heros */
+.product-overlay {
+    width: 30%;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 .card {
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -449,6 +439,13 @@ nav .navbar-nav li a:hover {
 }
 
 /* contact page */
+.contact-forms {
+    border: 2px solid #142127;
+    padding: 50px;
+    border-radius: 5px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    border: none;
+}
 
 /* our story page */
 
