--- a/templates/base.html
+++ b/templates/base.html
@@ -235,7 +235,7 @@
             </div>
         </div>
 
-        <div class="d-flex justify-content-between py-4 my-4 border-top row mt-sm-5 padding-5">
+        <div class="d-flex justify-content-between py-4 my-4 border-top row mt-sm-5">
             <div class="col-sm-12 col-md-6 justify-content-xs-center justify-content-md-end">
                 <h6>© 2022 North Yeast Brewing, Inc. All rights reserved.</h6>
             </div>
